--- a/assect/css/home.css
+++ b/assect/css/home.css
@@ -1,12 +1,10 @@
 /* common code - start */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-
 :root {
     --para-color: rgba(255, 255, 255, 0.6);
     --red: rgba(207, 0, 15, 0.886);
 }
-
 
 * {
     box-sizing: border-box;
@@ -14,6 +12,7 @@
     padding: 0;
     font-family: "Roboto", sans-serif;
     color: white;
+    /* overflow-x: hidden; */
 }
 
 body {
@@ -55,6 +54,111 @@ a {
     background: red;
     border-radius: 10px;
 }
+
+/* loader - start */
+.loader-main {
+    z-index: 9999;
+    height: 100vh;
+    width: 100vw;
+    /* border: 1px solid; */
+    background-color: #2f2525;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0px;
+    left: 0px   ;
+    /* transform: translate(-50%, -50%); */
+}
+
+.loader-inner {
+    height: 130px;
+    width: 130px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.big {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    background-color: rgb(175, 15, 15);
+    animation: bigAni 1.5s linear infinite;
+    position: relative;
+}
+
+.small {
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    background-color: rgba(204, 0, 0, 0.729);
+    animation: smallAni 1.5s linear infinite;
+}
+
+.hidden {
+    display: none;
+}
+
+@keyframes bigAni {
+    0% {
+        width: 100px;
+        height: 100px;
+    }
+
+    25% {
+        width: 50px;
+        height: 50px;
+    }
+
+    50% {
+        width: 0px;
+        height: 0px;
+    }
+
+    75% {
+        width: 50px;
+        height: 50px;
+    }
+
+    100% {
+        width: 100px;
+        height: 100px;
+    }
+}
+
+@keyframes smallAni {
+    0% {
+        width: 0px;
+        height: 0px;
+    }
+
+    25% {
+        width: 50px;
+        height: 50px;
+    }
+
+    50% {
+        width: 100px;
+        height: 100px;
+    }
+
+    75% {
+        width: 50px;
+        height: 50px;
+    }
+
+    100% {
+        width: 0px;
+        height: 0px;
+    }
+}
+
+/* loader - end */
 
 /* scrollbar - end */
 
@@ -187,7 +291,6 @@ header {
     .res-nav-icon img {
         display: none;
     }
-
 }
 
 @media only screen and (max-width: 600px) {
@@ -199,7 +302,6 @@ header {
         display: none;
     }
 }
-
 
 /* responsive nav bar - start */
 .res-nav {
@@ -279,7 +381,6 @@ header {
 }
 
 @media only screen and (max-width: 600px) {
-
     .res-nav {
         position: fixed;
         top: 0px;
@@ -289,7 +390,6 @@ header {
         height: 100vh;
         padding: 30px;
         margin: 0px;
-
     }
 
     .res-nav-inner {
@@ -309,8 +409,6 @@ header {
 /* responsive nav bar - end */
 /* nav bar - end */
 /* common code - end */
-
-
 
 /* home - start */
 .home {
@@ -369,8 +467,6 @@ header {
 .play-out:hover i {
     transform: scale(1.2);
 }
-
-
 
 .hc-detail p {
     font-size: 15px;
@@ -602,7 +698,6 @@ header {
 
 /* projects - start */
 
-
 .projects {
     width: 100%;
     padding: 120px;
@@ -646,7 +741,6 @@ header {
     background-color: red;
     padding: 15px 45px;
 }
-
 
 .project-nav {
     margin-top: 100px;
@@ -709,7 +803,6 @@ header {
     .project-button-main {
         display: none;
     }
-
 }
 
 @media only screen and (max-width: 600px) {
@@ -729,7 +822,6 @@ header {
     .project-button-main {
         display: none;
     }
-
 }
 
 /* projects - end */
@@ -779,7 +871,6 @@ header {
     padding: 50px 0px;
     border-bottom: 1px solid gray;
 }
-
 
 .edu-head {
     flex-direction: column;
@@ -831,14 +922,17 @@ header {
     .education-button div {
         display: none;
     }
-    .edu{
+
+    .edu {
         height: fit-content;
     }
-    .edu-sec{
+
+    .edu-sec {
         width: 100%;
         gap: 20px;
     }
-    .edu-con{
+
+    .edu-con {
         text-align: justify;
         width: 95vw;
     }
@@ -916,8 +1010,6 @@ header {
     justify-content: space-between;
 }
 
-
-
 .tm-carousel-btn {
     display: flex;
 }
@@ -930,7 +1022,6 @@ header {
     justify-content: center;
     align-items: center;
     margin-right: 20px;
-
 }
 
 .tm-slide p {
@@ -1021,7 +1112,6 @@ header {
         margin: 0px;
     }
 }
-
 
 /* testimonials - end */
 
@@ -1145,7 +1235,6 @@ header {
     z-index: 10;
 }
 
-
 .blog-card {
     background-image: none;
     background-color: #fff;
@@ -1171,12 +1260,9 @@ header {
     color: var(--para-color);
 }
 
-
-
 .blog-readMore a:hover {
     color: red;
 }
-
 
 /* hover effect */
 .blog-card {
@@ -1185,7 +1271,7 @@ header {
 
 .blog-card::before,
 .blog-card::after {
-    content: '';
+    content: "";
     position: absolute;
     width: 0;
     height: 0;
@@ -1226,7 +1312,6 @@ header {
 }
 
 /* hover effect */
-
 
 @media only screen and (max-width: 1200px) {
     .blog-con-main {
