--- a/assect/css/projects.css
+++ b/assect/css/projects.css
@@ -1,124 +1,122 @@
 /* common code - start */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-
 :root {
-    --para-color: rgba(255, 255, 255, 0.6);
-    --red: rgba(207, 0, 15, 0.886);
+  --para-color: rgba(255, 255, 255, 0.6);
+  --red: rgba(207, 0, 15, 0.886);
 }
 
-
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: "Roboto", sans-serif;
-    color: white;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  color: white;
 }
 
 body {
-    background-color: rgb(22, 22, 22);
-    position: relative;
-    width: 100%;
-    scrollbar-width: thin;
+  background-color: rgb(22, 22, 22);
+  position: relative;
+  width: 100%;
+  scrollbar-width: thin;
 }
 
 .scroll-effect-main {
-    scroll-snap-type: y mandatory;
-    height: fit-content;
-    overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+  height: fit-content;
+  overflow-y: scroll;
 }
 
 .scroll-effect {
-    scroll-snap-align: start;
-    height: fit-content;
+  scroll-snap-align: start;
+  height: fit-content;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 /* scrollbar - start */
 ::-webkit-scrollbar {
-    width: 6px;
+  width: 6px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #2f2525;
+  background: #2f2525;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: red;
-    border-radius: 10px;
+  background: red;
+  border-radius: 10px;
 }
 
 /* scrollbar - end */
 
 /* nav bar - start */
 header {
-    position: fixed;
-    width: 100%;
-    z-index: 100;
+  position: fixed;
+  width: 100%;
+  z-index: 100;
 }
 
 .base {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    position: relative;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    height: 108px;
-    /* position: fixed; */
-    z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: relative;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  height: 108px;
+  /* position: fixed; */
+  z-index: 100;
 }
 
 .base-active {
-    background-color: #2f2525;
+  background-color: #2f2525;
 }
 
 .logo img {
-    height: 23px;
+  height: 23px;
 }
 
 .head-nav {
-    display: flex;
-    gap: 60px;
-    align-items: center;
+  display: flex;
+  gap: 60px;
+  align-items: center;
 }
 
 .head-nav a {
-    font-size: 15px;
-    color: white;
+  font-size: 15px;
+  color: white;
 }
 
 .head-nav a:hover {
-    color: red;
+  color: red;
 }
 
 .base .num {
-    font-size: 15px;
+  font-size: 15px;
 }
 
 .social {
-    align-items: center;
-    position: absolute;
-    left: 50px;
-    top: 0px;
-    height: 100vh;
+  align-items: center;
+  position: absolute;
+  left: 50px;
+  top: 0px;
+  height: 100vh;
 }
 
 .social .icon {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 /* .icon::before {
@@ -144,242 +142,233 @@ header {
 } */
 
 .social .icon i {
-    font-size: 25px;
-    color: white;
+  font-size: 25px;
+  color: white;
 }
 
 .social .icon i:hover {
-    color: red;
+  color: red;
 }
 
 .copyRight-main {
-    position: relative;
+  position: relative;
 }
 
 .copyRight {
-    position: absolute;
-    top: 580px;
-    font-size: 15px;
+  position: absolute;
+  top: 580px;
+  font-size: 15px;
 }
 
 .res-nav-icon img {
-    height: 30px;
-    width: 30px;
+  height: 30px;
+  width: 30px;
 }
 
 /* nav bar - media - start */
 @media only screen and (max-width: 1500px) {
+  .head-nav,
+  .num {
+    display: none;
+  }
 
-    .head-nav,
-    .num {
-        display: none;
-    }
-
-    .base {
-        justify-content: space-between;
-        padding: 0px 60px;
-    }
+  .base {
+    justify-content: space-between;
+    padding: 0px 60px;
+  }
 }
 
 @media only screen and (min-width: 1500px) {
-    .res-nav-icon img {
-        display: none;
-    }
-
+  .res-nav-icon img {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 600px) {
-    .base {
-        padding: 30px;
-    }
+  .base {
+    padding: 30px;
+  }
 
-    .social {
-        display: none;
-    }
+  .social {
+    display: none;
+  }
 }
-
 
 /* responsive nav bar - start */
 .res-nav {
-    display: none;
+  display: none;
 }
 
 .res-nav {
-    z-index: 100;
-    height: 100vh;
-    width: 500px;
-    position: fixed;
-    background-color: black;
-    right: 0px;
-    padding: 40px 55px;
+  z-index: 100;
+  height: 100vh;
+  width: 500px;
+  position: fixed;
+  background-color: black;
+  right: 0px;
+  padding: 40px 55px;
 }
 
 .res-nav-inner {
-    height: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  height: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .rn-language {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-bottom: 95px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 95px;
 }
 
 .lng a {
-    color: red;
+  color: red;
 }
 
 .lng a:nth-last-child(-n + 2) {
-    margin-left: 20px;
+  margin-left: 20px;
 }
 
 .cancel img {
-    height: 28px;
-    width: 28px;
+  height: 28px;
+  width: 28px;
 }
 
 .rs-menu {
-    height: 100%;
-    overflow-y: scroll;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 .rs-menu li {
-    list-style-type: none;
-    padding: 10px;
+  list-style-type: none;
+  padding: 10px;
 }
 
 .rs-menu li a {
-    padding: 5px 0;
-    font-size: 30px;
-    font-weight: 400;
+  padding: 5px 0;
+  font-size: 30px;
+  font-weight: 400;
 }
 
 .rs-link {
-    padding-top: 95px;
+  padding-top: 95px;
 }
 
 .rsl-social {
-    display: flex;
-    gap: 15px;
-    margin-bottom: 50px;
+  display: flex;
+  gap: 15px;
+  margin-bottom: 50px;
 }
 
 .rsl-social i {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 .rsl-copyright {
-    font-size: 15px;
+  font-size: 15px;
 }
 
 @media only screen and (max-width: 600px) {
+  .res-nav {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 1000;
+    width: 100vw;
+    height: 100vh;
+    padding: 30px;
+    margin: 0px;
+  }
 
-    .res-nav {
-        position: fixed;
-        top: 0px;
-        left: 0px;
-        z-index: 1000;
-        width: 100vw;
-        height: 100vh;
-        padding: 30px;
-        margin: 0px;
+  .res-nav-inner {
+    height: 100%;
+    width: 100%;
+  }
 
-    }
+  .rsl-social {
+    display: none;
+  }
 
-    .res-nav-inner {
-        height: 100%;
-        width: 100%;
-    }
-
-    .rsl-social {
-        display: none;
-    }
-
-    .rs-menu {
-        overflow-y: unset;
-    }
+  .rs-menu {
+    overflow-y: unset;
+  }
 }
 
 /* responsive nav bar - end */
 /* nav bar - end */
 /* common code - end */
 
-
-
 /* project page - start */
 /* banner - start */
 .project-banner {
-    margin-bottom: 120px;
-    width: 100%;
-    /* height: 780px; */
-    height: 850px;
-    background-position: center 5%;
-    background-size: 110%;
-    background-repeat: no-repeat;
-    display: flex;
-    align-items: end;
-    padding-bottom: 100px;
+  /* margin-bottom: 120px; */
+  width: 100%;
+  /* height: 780px; */
+  height: 850px;
+  background-position: center 5%;
+  background-size: 120%;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: end;
+  padding-bottom: 100px;
 }
 
 .project-banner-main {
-    width: 1050px;
-    margin: 0px auto;
-    padding: 0px 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  width: 1050px;
+  margin: 0px auto;
+  padding: 0px 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-
-
 .banner-head {
-    font-size: 120px;
-    text-align: center;
+  font-size: 115px;
+  text-align: center;
 }
 
 .banner-info {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 220px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 150px;
 }
 
-.banner-info>div {
-    width: 217px;
+.banner-info > div {
+  width: 217px;
 }
 
 .banner-info h4 {
-    font-size: 15px;
-    margin-bottom: 10px;
+  font-size: 15px;
+  margin-bottom: 10px;
 }
 
 /* banner - end */
 
 /* project-info - start */
 .project-info {
-    width: 100%;
-    height: auto;
-    padding: 100px 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: auto;
+  padding: 150px 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .project-info-main {
-    width: 680px;
+  width: 680px;
 }
 
 .project-info-main p {
-    line-height: 35px;
-    font-weight: normal;
-    font-size: 20px;
+  line-height: 35px;
+  font-weight: normal;
+  font-size: 20px;
 }
 
 .project-info-main a {
-    color: red;
+  color: red;
 }
 
 /* project-info - end */
@@ -387,52 +376,254 @@ header {
 /* Breaf and idea - start*/
 
 .breaf-main {
-    width: 1080px;
-    margin: 0px auto;
+  width: 1080px;
+  margin: 0px auto;
 }
 
 .breaf-img {
-    display: flex;
-    margin-bottom: 150px;
+  display: flex;
+  margin-bottom: 150px;
 }
 
 .breaf-img img {
-    height: 480px;
-    margin: 0px auto;
+  /* height: 480px; */
+  height: 580px;
+  margin: 0px auto;
 }
 
 .breaf-con {
-    width: 700px;
-    text-align: center;
-    line-height: 30px;
-    margin: 150px auto;
+  width: 700px;
+  text-align: center;
+  line-height: 30px;
+  margin: 150px auto;
 }
 
 .breaf-head h3 {
-    font-size: 50px;
-    font-weight: 400;
-    margin-bottom: 60px;
+  font-size: 50px;
+  font-weight: 400;
+  padding-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
 
 .breaf-con p:last-child {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 /* Breaf and idea - end*/
 
 /* project video - start */
 .project-video {
+  width: 100%;
+  height: 630px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.project-video-play {
+  height: 100px;
+  width: 100px;
+  border: 2px solid white;
+  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.project-video-play i {
+  font-size: 30px;
+}
+
+/* project video - end */
+
+/* result - start */
+.result {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-bottom: 150px;
+}
+
+.result-head {
+  margin: 100px 0px 60px 0px;
+}
+
+.result-head h3 {
+  font-size: 50px;
+  font-weight: 400;
+}
+
+.result-info {
+  width: 719px;
+  margin: 0px auto 80px auto;
+  line-height: 24px;
+}
+
+.result-img {
+  height: 566px;
+  width: 1050px;
+}
+
+.result-img img {
+  width: 100%;
+  height: 100%;
+}
+
+.rh-inner {
+  margin: 100px auto;
+  height: 120px;
+  width: 120px;
+  /* border: 2px solid; */
+  background-color: rgb(43, 43, 43);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+
+.rh-inner i {
+  font-size: 50px;
+}
+
+/* result - end */
+
+/* project page - end */
+
+/* Responsive */
+/* Mobile View */
+@media screen and (min-width: 350px) and (max-width: 768px) {
+  /* header{
+        display: none;
+    } */
+
+  /* Project banner*/
+  .project-banner {
+    margin-bottom: 20px;
     width: 100%;
-    height: 630px;
+    /* height: 100%; */
+    height: 1500px;
+    display: flex;
+    flex-direction: column;
+    /* align-items: end; */
+    justify-content: space-between;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  .project-banner-main {
+    width: 100%;
+    height: 994px;
+    margin: auto;
+    padding: 0px 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 400px;
+  }
+
+  .banner-head {
+    font-size: 120px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .banner-info {
+    display: block;
+  }
+
+  .banner-info > div {
+    width: 100%;
+  }
+
+  .banner-info h4 {
+    font-size: 15px;
+  }
+
+  .banner-info {
+    margin: 0;
+  }
+
+  /* Project Info */
+  .project-info {
+    width: auto;
+    height: auto;
+    padding: 10px;
+    display: block;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .project-info-main {
+    width: 100%;
+  }
+
+  .project-info-main p {
+    line-height: 35px;
+    font-weight: normal;
+    font-size: 20px;
+  }
+
+  .project-info-main a {
+    color: red;
+  }
+
+  /* Brief */
+  .breaf-main {
+    margin-top: 50px !important;
+    width: 100%;
+    margin: 0px;
+  }
+
+  .breaf-img {
+    display: block;
+    margin-bottom: 50px;
+  }
+
+  .breaf-img img {
+    width: 100%;
+    height: auto;
+    margin: auto;
+  }
+
+  .breaf-con {
+    width: auto;
+    text-align: center;
+    line-height: 30px;
+    margin: 0px;
+  }
+
+  .breaf-head h3 {
+    font-size: 40px;
+    font-weight: 400;
+    margin-bottom: 50px;
+  }
+
+  .breaf-con p:last-child {
+    margin-top: 15px;
+  }
+
+  .project-video {
+    margin-top: 100px;
+    width: 100%;
+    height: 500px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
-}
+  }
 
-.project-video-play {
+  .project-video-play {
     height: 100px;
     width: 100px;
     border: 2px solid white;
@@ -440,266 +631,59 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-}
+  }
 
-.project-video-play i {
+  .project-video-play i {
     font-size: 30px;
-}
+  }
 
-/* project video - end */
-
-/* result - start */
-.result {
-    display: flex;
-    flex-direction: column;
+  /* Result */
+  .result {
+    display: block;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     text-align: center;
     padding-bottom: 150px;
-}
+  }
 
-.result-head {
+  .result-head {
     margin: 100px 0px 60px 0px;
-}
+  }
 
-.result-head h3 {
-    font-size: 50px;
+  .result-head h3 {
+    font-size: 45px;
     font-weight: 400;
-}
+  }
 
-.result-info {
-    width: 719px;
+  .result-info {
+    width: 100%;
     margin: 0px auto 80px auto;
     line-height: 24px;
-}
+  }
 
-.result-img {
-    height: 566px;
-    width: 1050px;
-}
+  .result-img {
+    height: 250px;
+    width: 100%;
+  }
 
-.result-img img {
+  .result-img img {
     width: 100%;
     height: 100%;
-}
+  }
 
-.rh-inner {
+  .rh-inner {
     margin: 100px auto;
     height: 120px;
     width: 120px;
-    /* border: 2px solid; */
     background-color: rgb(43, 43, 43);
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-}
+  }
 
-.rh-inner i {
+  .rh-inner i {
     font-size: 50px;
-}
-
-/* result - end */
-
-/* project page - end */
-
-
-
-
-/* Responsive */
-/* Mobile View */
-@media screen and (min-width: 350px) and (max-width:768px) {
-    /* header{
-        display: none;
-    } */
-
-    /* Project banner*/
-    .project-banner {
-        margin-bottom: 20px;
-        width: 100%;
-        /* height: 100%; */
-        height: 1500px;
-        display: flex;
-        flex-direction: column;
-        /* align-items: end; */
-        justify-content: space-between;
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-    }
-
-    .project-banner-main {
-        width: 100%;
-        height: 994px;
-        margin: auto;
-        padding: 0px 30px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        margin-top: 400px;
-    }
-
-
-
-    .banner-head {
-        font-size: 120px;
-        text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .banner-info {
-        display: block;
-    }
-
-    .banner-info>div {
-        width: 100%;
-    }
-
-    .banner-info h4 {
-        font-size: 15px;
-    }
-
-
-    .banner-info {
-        margin: 0;
-    }
-
-    /* Project Info */
-    .project-info {
-        width: auto;
-        height: auto;
-        padding: 10px;
-        display: block;
-        text-align: center;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .project-info-main {
-        width: 100%;
-    }
-
-    .project-info-main p {
-        line-height: 35px;
-        font-weight: normal;
-        font-size: 20px;
-    }
-
-    .project-info-main a {
-        color: red;
-    }
-
-    /* Brief */
-    .breaf-main {
-        margin-top: 50px !important;
-        width: 100%;
-        margin: 0px;
-    }
-
-    .breaf-img {
-        display: block;
-        margin-bottom: 50px;
-    }
-
-    .breaf-img img {
-        width: 100%;
-        height: auto;
-        margin: auto;
-    }
-
-    .breaf-con {
-        width: auto;
-        text-align: center;
-        line-height: 30px;
-        margin: 0px;
-    }
-
-    .breaf-head h3 {
-        font-size: 40px;
-        font-weight: 400;
-        margin-bottom: 50px;
-    }
-
-    .breaf-con p:last-child {
-        margin-top: 15px;
-    }
-
-    .project-video {
-        margin-top: 100px;
-        width: 100%;
-        height: 500px;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .project-video-play {
-        height: 100px;
-        width: 100px;
-        border: 2px solid white;
-        border-radius: 50px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .project-video-play i {
-        font-size: 30px;
-    }
-
-    /* Result */
-    .result {
-        display: block;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        padding-bottom: 150px;
-    }
-
-    .result-head {
-        margin: 100px 0px 60px 0px;
-    }
-
-    .result-head h3 {
-        font-size: 45px;
-        font-weight: 400;
-    }
-
-    .result-info {
-        width: 100%;
-        margin: 0px auto 80px auto;
-        line-height: 24px;
-    }
-
-    .result-img {
-        height: 250px;
-        width: 100%;
-    }
-
-    .result-img img {
-        width: 100%;
-        height: 100%;
-    }
-
-    .rh-inner {
-        margin: 100px auto;
-        height: 120px;
-        width: 120px;
-        background-color: rgb(43, 43, 43);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 50%;
-    }
-
-    .rh-inner i {
-        font-size: 50px;
-    }
-
+  }
 }
